<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:weightSum="4">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:src="@mipmap/triptik_login_logo" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="34dp"
                android:src="@mipmap/triptik_logo_new" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:gravity="center_horizontal"
                android:hint="@string/login_screen_email_input_hint"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/main"
                android:textColorHint="@color/main"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:gravity="center_horizontal"
                android:hint="@string/login_screen_password_input_hint"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/main"
                android:textColorHint="@color/main"
                android:textSize="13sp" />

            <!-- Login Button -->

            <Button
                android:id="@+id/btnLogin"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_black_button"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/login_screen_login_button"
                android:textColor="@color/white"
                android:textSize="15sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">
            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/btnLinkToRegisterScreen"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/clear_button_outline"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/login_screen_register_link_button"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/section_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="2dp"
                android:text="@string/login_screen_footer_text"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>